cmake_minimum_required(VERSION 3.8 FATAL_ERROR)

project(cppcourse)

add_subdirectory(sfml1.1)
add_subdirectory(sfml1.2)
add_subdirectory(sfml1.3) 
add_subdirectory(sfml2.1)
add_subdirectory(sfml2.2)
add_subdirectory(sfml3.1)
add_subdirectory(sfml3.2)
add_subdirectory(sfml3.3)
add_subdirectory(workshop1.1)
add_subdirectory(workshop1.2)
add_subdirectory(workshop1.3)
add_subdirectory(workshop1.4)

